--- a/profile-settings.html
+++ b/profile-settings.html
@@ -29,7 +29,7 @@
         </div>
         <div class="header_main">
             <div class="fds-layout-grid fds-align--center fmc-py-3">
-                <div class="fds-layout-grid__inner header_flex">
+                <div class="fds-layout-grid__inner header_flex fmc-pb-2">
                     <div class="fds-layout-grid__cell--span-3">
                         <a href="./index.html">
                             <img src="./img/header-logo.svg" alt="" class="header__logo">
@@ -45,7 +45,7 @@
                     <div class="fds-layout-grid__cell--span-3 fds-align--right">
                         <div class="header__user-area">
                             <a href="./index.html">
-                                <img src="./img/header-flag.svg" alt="" class="header__flag fmc-mb-2">
+                                <img src="./img/header-flag.svg" alt="" class="header__flag">
                             </a>
                             <p class="fmc-type--content2 fmc-mb-1">Welcome, Academy Ford Sales</p>
                             <p class="fmc-type--content2 fmc-type--bold">Membership Organization Partner</p>
@@ -58,6 +58,252 @@
     <main class="fmc-pt-8 fmc-pb-10">
         <div class="fds-layout-grid">
             <h1 class="fmc-type--heading4 fds-align--center fmc-mb-7">Profile Settings</h1>
+
+            <div class="fds-layout-grid__inner fds-color__bg--fourth fmc-py-6 fmc-px-6 fmc-mb-6">
+                <div class="fds-layout-grid__cell--span-4">
+                    <p class="fmc-type--content1 fmc-type--bold fmc-mb-3">Company Information</p>
+                    <p class="fmc-type--body1 fmc-type--bold fmc-mb-1">Academy Ford Sales</p>
+                    <p class="fmc-type--body1 fmc-mb-3">1234 Main Street<br>Tuscaloosa, AL USA</p>
+                    <p class="fmc-type--body1 fmc-type--bold fmc-pt-1">Partner Code:</p>
+                    <p class="fmc-type--body1 fmc-mb-3">FE49G</p>
+                    <p class="fmc-type--body1 fmc-type--bold fmc-pt-1">Duns Number:</p>
+                    <p class="fmc-type--body1">0149581038</p>
+                </div>
+                <div class="fds-layout-grid__cell--span-4">
+                    <p class="fmc-type--content1 fmc-type--bold fmc-mb-3">Key Contact</p>
+                    <p class="fmc-type--body1 fmc-type--bold fmc-mb-1">USA</p>
+                    <p class="fmc-type--body1">
+                        Paul Bryant<br>
+                        Marketing Director<br>
+                        1234 Main Street<br>
+                        Tuscaloosa, AL USA<br>313.777.2020<br>
+                        bearbryant@academyfordsales.com
+                    </p>
+                </div>
+                <div class="fds-layout-grid__cell--span-4">
+                    <p class="fmc-type--content1 fmc-type--bold fmc-mb-3">Major Indicators</p>
+                    <p class="fmc-type--body1 fmc-type--bold fmc-mb-1">Employee Count (US):</p>
+                    <p class="fmc-type--body1 fmc-mb-3">200</p>
+                    <p class="fmc-type--body1 fmc-type--bold fmc-pt-1">Employee Count (CAN):</p>
+                    <p class="fmc-type--body1 fmc-mb-3">3</p>
+                    <p class="fmc-type--body1 fmc-type--bold fmc-pt-1">Employee Count (CAN):</p>
+                    <p class="fmc-type--body1 fmc-mb-3">3</p>
+                    <p class="fmc-type--body1 fmc-type--bold fmc-pt-1">Employee Count (CAN):</p>
+                    <p class="fmc-type--body1">1</p>
+                </div>
+            </div>
+
+            <h2 class="fmc-type--heading4 fds-align--center fmc-mb-6">Modify Current Information</h2>
+
+            <p class="fmc-type--content1 fmc-type--bold fmc-mb-2">Company Information</p>
+
+            <div class="fds-layout-grid__inner fds-layout-grid__inner_five fmc-pt-1 fmc-mb-4">
+                <div class="fds-layout-grid__cell--span-1">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">Partner Code (CODES)</div>
+                    <input class="fmc-input" type="text" disabled value="FE49G">
+                </div>
+                <div class="fds-layout-grid__cell--span-1">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">Duns Number (DUNSNO)</div>
+                    <input class="fmc-input" type="text" disabled value="0149581038">
+                </div>
+                <div class="fds-layout-grid__cell--span-1">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">Partner Type</div>
+                    <input class="fmc-input" type="text" disabled value="Membership">
+                </div>
+                <div class="fds-layout-grid__cell--span-1">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">Ford Sponsor</div>
+                    <input class="fmc-input" type="text" disabled value="Bob Gibson">
+                </div>
+            </div>
+
+            <div class="fds-layout-grid__inner fmc-pt-1 fmc-mb-3">
+                <div class="fds-layout-grid__cell--span-6">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">Company Name (PARENT_COMPANY_NAME)</div>
+                    <input class="fmc-input" type="text" placeholder="Academy Ford Sales">
+                </div>
+                <div class="fds-layout-grid__cell--span-6">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">Address - No PO Box (ADDRESS)</div>
+                    <input class="fmc-input" type="text" placeholder="1234 Main Street">
+                </div>
+            </div>
+
+            <div class="fds-layout-grid__inner fds-layout-grid__inner_five fmc-pt-1 fmc-mb-7">
+                <div class="fds-layout-grid__cell--span-1">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">ZIP Code (ZIP)</div>
+                    <input class="fmc-input" type="text" placeholder="40998">
+                </div>
+                <div class="fds-layout-grid__cell--span-1">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">State (STATE_COUNTRY)</div>
+                    <select name="vehicles" id="vehicle-select" class="fmc-select">
+                        <option value="f150">Alabama</option>
+                        <option value="escape">Escape</option>
+                        <option value="bronco">Bronco</option>
+                        <option value="edge">Edge</option>
+                        <option value="mache">Mustang Mach-E</option>
+                        <option value="expedition">Expedition</option>
+                    </select>
+                </div>
+                <div class="fds-layout-grid__cell--span-1">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">City (CITY)</div>
+                    <input class="fmc-input" type="text" placeholder="Tuscaloosa">
+                </div>
+                <div class="fds-layout-grid__cell--span-1">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">Country (COUNTRY)</div>
+                    <select name="vehicles" id="vehicle-select" class="fmc-select">
+                        <option value="f150">USA</option>
+                        <option value="escape">Escape</option>
+                        <option value="bronco">Bronco</option>
+                        <option value="edge">Edge</option>
+                        <option value="mache">Mustang Mach-E</option>
+                        <option value="expedition">Expedition</option>
+                    </select>
+                </div>
+            </div>
+
+            <p class="fmc-type--content1 fmc-type--bold fmc-mb-2">Key Contact (US)</p>
+
+            <div class="fds-layout-grid__inner fds-layout-grid__inner_five fmc-pt-1 fmc-mb-4">
+                <div class="fds-layout-grid__cell--span-1">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">Prefix (CORP_NAME_PREFIX)</div>
+                    <select name="vehicles" id="vehicle-select" class="fmc-select">
+                        <option value="f150">USA</option>
+                        <option value="escape">Escape</option>
+                        <option value="bronco">Bronco</option>
+                        <option value="edge">Edge</option>
+                        <option value="mache">Mustang Mach-E</option>
+                        <option value="expedition">Expedition</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="fds-layout-grid__inner fmc-pt-1 fmc-mb-4">
+                <div class="fds-layout-grid__cell--span-6">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">First Name (CORP_FIRST_NAME)</div>
+                    <input class="fmc-input" type="text" placeholder="William">
+                </div>
+                <div class="fds-layout-grid__cell--span-6">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">Last Name (CORP_LAST_NAME)</div>
+                    <input class="fmc-input" type="text" placeholder="Idol">
+                </div>
+            </div>
+
+            <div class="fds-layout-grid__inner fmc-pt-1 fmc-mb-4">
+                <div class="fds-layout-grid__cell--span-6">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">Title (CORP_TITLE)</div>
+                    <input class="fmc-input" type="text" placeholder="Human Resources">
+                </div>
+            </div>
+
+            <div class="fds-layout-grid__inner fmc-pt-1 fmc-mb-4">
+                <div class="fds-layout-grid__cell--span-6">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">Address (US_ADDRESS)</div>
+                    <input class="fmc-input" type="text">
+                </div>
+            </div>
+
+            <div class="fds-layout-grid__inner fds-layout-grid__inner_five fmc-pt-1 fmc-mb-4">
+                <div class="fds-layout-grid__cell--span-1">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">ZIP Code (ZIP)</div>
+                    <input class="fmc-input" type="text" placeholder="40998">
+                </div>
+                <div class="fds-layout-grid__cell--span-1">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">State (STATE_COUNTRY)</div>
+                    <select name="vehicles" id="vehicle-select" class="fmc-select">
+                        <option value="f150">Alabama</option>
+                        <option value="escape">Escape</option>
+                        <option value="bronco">Bronco</option>
+                        <option value="edge">Edge</option>
+                        <option value="mache">Mustang Mach-E</option>
+                        <option value="expedition">Expedition</option>
+                    </select>
+                </div>
+                <div class="fds-layout-grid__cell--span-1">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">City (CITY)</div>
+                    <input class="fmc-input" type="text" placeholder="Tuscaloosa">
+                </div>
+                <div class="fds-layout-grid__cell--span-1">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">Country (COUNTRY)</div>
+                    <select name="vehicles" id="vehicle-select" class="fmc-select">
+                        <option value="f150">USA</option>
+                        <option value="escape">Escape</option>
+                        <option value="bronco">Bronco</option>
+                        <option value="edge">Edge</option>
+                        <option value="mache">Mustang Mach-E</option>
+                        <option value="expedition">Expedition</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="fds-layout-grid__inner fds-layout-grid__inner_five fmc-pt-1 fmc-mb-4">
+                <div class="fds-layout-grid__cell--span-1">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">Phone (CORP_PHONE)</div>
+                    <input class="fmc-input" type="text" placeholder="(515) 333-2928">
+                </div>
+                <div class="fds-layout-grid__cell--span-1">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">Ext. (CORP_EXT)</div>
+                    <input class="fmc-input" type="text" placeholder="13">
+                </div>
+            </div>
+
+            <div class="fds-layout-grid__inner fmc-pt-1 fmc-mb-7">
+                <div class="fds-layout-grid__cell--span-6">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">Email (CORP_EMAIL)</div>
+                    <input class="fmc-input" type="email" placeholder="idol.william@academyfordsales.com">
+                </div>
+            </div>
+
+            <p class="fmc-type--content1 fmc-type--bold fmc-mb-2">Major Indicators</p>
+
+            <div class="fds-layout-grid__inner fmc-pt-1 fmc-mb-10">
+                <div class="fds-layout-grid__cell--span-3">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">Employee Count - US (EMP_COUNT)</div>
+                    <input class="fmc-input" type="text" placeholder="200">
+                </div>
+                <div class="fds-layout-grid__cell--span-3">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">Employee Count - CAN (EMP_COUNT_CAN)</div>
+                    <input class="fmc-input" type="text" placeholder="2">
+                </div>
+                <div class="fds-layout-grid__cell--span-3">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2"># Site Locations - US (NO_SITE)</div>
+                    <input class="fmc-input" type="text" placeholder="3">
+                </div>
+                <div class="fds-layout-grid__cell--span-3">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2"># Site Locations - Canada (NO_SITE_CAN)</div>
+                    <input class="fmc-input" type="text" placeholder="1">
+                </div>
+                <div class="fds-layout-grid__cell--span-6">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">Does Company have a Facebook page? If yes, please enter URL (FACEBOOK_FLAG)</div>
+                    <input class="fmc-input" type="text">
+                </div>
+                <div class="fds-layout-grid__cell--span-6">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">Does Company have a Twitter group? If yes, please enter URL (TWITTER_FLAG)</div>
+                    <input class="fmc-input" type="text">
+                </div>
+                <div class="fds-layout-grid__cell--span-6">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">Does Company have a LinkedIn page? If yes, please enter URL (LINKEDIN_FLAG)</div>
+                    <input class="fmc-input" type="text">
+                </div>
+                <div class="fds-layout-grid__cell--span-6">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">URL where X-Plan Program is being advertised to employees/members of company</div>
+                    <input class="fmc-input" type="text">
+                </div>
+                <div class="fds-layout-grid__cell--span-3">
+                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">Enrollment Rationale (ENROLL_RATIONALE)</div>
+                    <select name="vehicles" id="vehicle-select" class="fmc-select">
+                        <option value="">Select</option>
+                        <option value="f150">Alabama</option>
+                        <option value="escape">Escape</option>
+                        <option value="bronco">Bronco</option>
+                        <option value="edge">Edge</option>
+                        <option value="mache">Mustang Mach-E</option>
+                        <option value="expedition">Expedition</option>
+                    </select>
+                </div>
+            </div>
+
+            <button class="fmc-button fmc-mx-auto">Save/Modify</button>
+
+
         </div>
     </main>
     <footer class="footer">
