--- a/faqs.html
+++ b/faqs.html
@@ -28,8 +28,8 @@
             </div>
         </div>
         <div class="header_main">
-            <div class="fds-layout-grid fds-align--center">
-                <div class="fds-layout-grid__inner header_flex fmc-py-3">
+            <div class="fds-layout-grid fds-align--center fmc-py-3">
+                <div class="fds-layout-grid__inner header_flex fmc-pb-2">
                     <div class="fds-layout-grid__cell--span-3">
                         <a href="./index.html">
                             <img src="./img/header-logo.svg" alt="" class="header__logo">
@@ -45,7 +45,7 @@
                     <div class="fds-layout-grid__cell--span-3 fds-align--right">
                         <div class="header__user-area">
                             <a href="./index.html">
-                                <img src="./img/header-flag.svg" alt="" class="header__flag fmc-mb-2">
+                                <img src="./img/header-flag.svg" alt="" class="header__flag">
                             </a>
                             <p class="fmc-type--content2 fmc-mb-1">Welcome, Academy Ford Sales</p>
                             <p class="fmc-type--content2 fmc-type--bold">Membership Organization Partner</p>
