--- a/dashboard.html
+++ b/dashboard.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="css/custom.css" />
 </head>
 <body>
-    <header>
+    <header class="header_home">
         <div class="header_top fds-color__bg--fourth">
             <div class="fds-layout-grid fds-align--right fmc-py-2">
                 <ul class="header_top__menu menu_small">
@@ -55,7 +55,7 @@
             </div>
         </div>
     </header>
-    <main class="fmc-pt-8 fmc-pb-10">
+    <main class="fmc-pb-10">
         <div class="fmc-billboard fmc-billboard--justify-start fmc-billboard--align-start">
             <div class="fmc-billboard__image" style="background-image: url(img/dashboard.png);"></div>
             <div class="fmc-billboard__scrim fmc-billboard--scrim-left fmc-billboard--scrim-dark"></div>
