--- a/marketing-toolkit.html
+++ b/marketing-toolkit.html
@@ -57,71 +57,211 @@
     </header>
     <main class="fmc-pt-8 fmc-pb-10">
         <div class="fds-layout-grid">
-            <h1 class="fmc-type--heading4 fds-align--center fmc-mb-7">X-Plan Program Rules</h1>
+            <h1 class="fmc-type--heading4 fds-align--center fmc-mb-7">X-Plan Marketing Toolkit</h1>
             <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">Brand</div>
             <div class="fmc-type--subtitle1">
                 <fieldset class="fmc-check">
                     <label>
                         <input type="radio" name="radio-button-items" value="ford" checked="">
-                        <span>Ford</span>
+                        <span class="fmc-type--body1">Ford</span>
                     </label>
                     <label>
                         <input type="radio" name="radio-button-items" value="lincoln">
-                        <span>Lincoln</span>
+                        <span class="fmc-type--body1">Lincoln</span>
                     </label>
                 </fieldset>
             </div>
-            <div class="js-fmc-tabs fmc-tabs" >
+            <div class="js-fmc-tabs fmc-tabs fmc-pt-7">
                 <div class="fmc-tabs__tablist-wrapper">
-                    <div class="fmc-tabs__tablist" role="tablist" aria-label="Features">
-                        <button
-                        class="fmc-tabs__tab"
-                        role="tab"
-                        aria-selected="true"
-                        aria-controls="FDShTabsImagesPanelCollision"
-                        id="FDShTabsImagesTabCollision"
-                        tabindex="0"
-                        >
-                        Collision
-                        </button>
-                        <button
-                        class="fmc-tabs__tab"
-                        role="tab"
-                        aria-selected="false"
-                        aria-controls="FDShTabsImagesPanelClimate"
-                        id="FDShTabsImagesTabClimate"
-                        tabindex="-1"
-                        >
-                        Climate
-                        </button>
-                        <span class="fmc-tabs__tab-border"></span>
-                    </div>
+                  <div class="fmc-tabs__tablist" role="tablist" aria-label="Features">
+                    <button
+                      class="fmc-tabs__tab fds-color__text--gray2 fmc-type--bold"
+                      role="tab"
+                      aria-selected="true"
+                      aria-controls="xPlanPrintAssets"
+                      tabindex="0"
+                    >
+                    X-Plan Print Assets
+                    </button>
+                    <button
+                      class="fmc-tabs__tab fds-color__text--gray2 fmc-type--bold"
+                      role="tab"
+                      aria-selected="false"
+                      aria-controls="xPlanDigitalAssets"
+                      tabindex="-1"
+                    >
+                    X-Plan Digital Assets
+                    </button>
+                    <button
+                      class="fmc-tabs__tab fds-color__text--gray2 fmc-type--bold"
+                      role="tab"
+                      aria-selected="false"
+                      aria-controls="xPlanHeyContactFuide"
+                      tabindex="-1"
+                    >
+                      X-Plan Key Contact Guide
+                    </button>
+                    <span class="fmc-tabs__tab-border"></span>
+                  </div>
                 </div>
                 <div class="fmc-tabs__tabpanels fds-color--gray3">
-                    <div id="FDShTabsImagesPanelCollision" class="fmc-tabs__tabpanel" role="tabpanel" aria-labelledby="FDShTabsImagesTabCollision" tabindex="0">
-                        <h3>Collision</h3>
-                        <img class="fds-p--b-2" src="https://via.placeholder.com/1920x1080" alt="a placeholder" style="max-width:100%;" />
-                        <p class="fds-color__text--gray3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis enim porta, iaculis massa dignissim, posuere enim. Aliquam eu tortor auctor, dignissim velit ac, dapibus diam.</p>
+                    <div class="fmc-tabs__tabpanel" role="tabpanel" aria-labelledby="xPlanPrintAssets" tabindex="0">
+                        <div class="fds-layout-grid">
+                            <div class="fds-layout-grid__inner">
+                                <div class="fds-layout-grid__cell--span-4 fds-align--center fmc-mt-8">
+                                    <img class="fmc-marketing-toolkit-img fmc-cards__image fmc-mb-2" src="./img/xplan-full-logo.svg" alt="a placeholder" />
+                                    <p class="fmc-type--body2 fmc-type--bold fmc-mb-3">X-Plan Partner Recognition<br>Ford - RGB</p>
+                                    <a class="fmc-button" href="#">
+                                        Download file
+                                        <span class="fds-icon fds-font--ford-icons__chevron-right fds-icon--offset-right"></span>
+                                    </a>
+                                </div>
+                                <div class="fds-layout-grid__cell--span-4 fds-align--center fmc-mt-8">
+                                    <img class="fmc-marketing-toolkit-img fmc-cards__image fmc-mb-2" src="./img/xplan-full-logo.svg" alt="a placeholder" />
+                                    <p class="fmc-type--body2 fmc-type--bold fmc-mb-3">X-Plan Partner Recognition<br>Ford - RGB</p>
+                                    <a class="fmc-button" href="#">
+                                        Download file
+                                        <span class="fds-icon fds-font--ford-icons__chevron-right fds-icon--offset-right"></span>
+                                    </a>
+                                </div>
+                                <div class="fds-layout-grid__cell--span-4 fds-align--center fmc-mt-8">
+                                    <img class="fmc-marketing-toolkit-img fmc-cards__image fmc-mb-2" src="./img/xplan-full-logo.svg" alt="a placeholder" />
+                                    <p class="fmc-type--body2 fmc-type--bold fmc-mb-3">X-Plan Partner Recognition<br>Ford - RGB</p>
+                                    <a class="fmc-button" href="#">
+                                        Download file
+                                        <span class="fds-icon fds-font--ford-icons__chevron-right fds-icon--offset-right"></span>
+                                    </a>
+                                </div>
+                                <div class="fds-layout-grid__cell--span-4 fds-align--center fmc-mt-8">
+                                    <img class="fmc-marketing-toolkit-img fmc-cards__image fmc-mb-2" src="./img/xplan-full-logo.svg" alt="a placeholder" />
+                                    <p class="fmc-type--body2 fmc-type--bold fmc-mb-3">X-Plan Partner Recognition<br>Ford - RGB</p>
+                                    <a class="fmc-button" href="#">
+                                        Download file
+                                        <span class="fds-icon fds-font--ford-icons__chevron-right fds-icon--offset-right"></span>
+                                    </a>
+                                </div>
+                                <div class="fds-layout-grid__cell--span-4 fds-align--center fmc-mt-8">
+                                    <img class="fmc-marketing-toolkit-img fmc-cards__image fmc-mb-2" src="./img/xplan-full-logo.svg" alt="a placeholder" />
+                                    <p class="fmc-type--body2 fmc-type--bold fmc-mb-3">X-Plan Partner Recognition<br>Ford - RGB</p>
+                                    <a class="fmc-button" href="#">
+                                        Download file
+                                        <span class="fds-icon fds-font--ford-icons__chevron-right fds-icon--offset-right"></span>
+                                    </a>
+                                </div>
+                                <div class="fds-layout-grid__cell--span-4 fds-align--center fmc-mt-8">
+                                    <img class="fmc-marketing-toolkit-img fmc-cards__image fmc-mb-2" src="./img/xplan-full-logo.svg" alt="a placeholder" />
+                                    <p class="fmc-type--body2 fmc-type--bold fmc-mb-3">X-Plan Partner Recognition<br>Ford - RGB</p>
+                                    <a class="fmc-button" href="#">
+                                        Download file
+                                        <span class="fds-icon fds-font--ford-icons__chevron-right fds-icon--offset-right"></span>
+                                    </a>
+                                </div>
+                                <div class="fds-layout-grid__cell--span-4 fds-align--center fmc-mt-8">
+                                    <img class="fmc-marketing-toolkit-img fmc-cards__image fmc-mb-2" src="./img/xplan-full-logo.svg" alt="a placeholder" />
+                                    <p class="fmc-type--body2 fmc-type--bold fmc-mb-3">X-Plan Partner Recognition<br>Ford - RGB</p>
+                                    <a class="fmc-button" href="#">
+                                        Download file
+                                        <span class="fds-icon fds-font--ford-icons__chevron-right fds-icon--offset-right"></span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div id="FDShTabsImagesPanelClimate" class="fmc-tabs__tabpanel" role="tabpanel"   aria-labelledby="FDShTabsImagesTabClimate" tabindex="-1">
-                        <h3>Climate</h3>
-                        <img class="fds-p--b-2" src="https://via.placeholder.com/1920x1080" alt="a placeholder" style="max-width:100%;" />
-                        <p class="fds-color__text--gray3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis enim porta, iaculis massa dignissim, posuere enim. Aliquam eu tortor auctor, dignissim velit ac, dapibus diam.</p>
+                    <div class="fmc-tabs__tabpanel" role="tabpanel" aria-labelledby="xPlanDigitalAssets" tabindex="-1">
+                        <div class="fds-layout-grid">
+                            <div class="fds-layout-grid__inner">
+                                <div class="fds-layout-grid__cell--span-4 fds-align--center fmc-mt-8">
+                                    <img class="fmc-marketing-toolkit-img fmc-cards__image fmc-mb-2" src="./img/xplan-full-logo.svg" alt="a placeholder" />
+                                    <p class="fmc-type--body2 fmc-type--bold fmc-mb-3">X-Plan Partner Recognition<br>Ford - RGB</p>
+                                    <a class="fmc-button" href="#">
+                                        Download file
+                                        <span class="fds-icon fds-font--ford-icons__chevron-right fds-icon--offset-right"></span>
+                                    </a>
+                                </div>
+                                <div class="fds-layout-grid__cell--span-4 fds-align--center fmc-mt-8">
+                                    <img class="fmc-marketing-toolkit-img fmc-cards__image fmc-mb-2" src="./img/xplan-full-logo.svg" alt="a placeholder" />
+                                    <p class="fmc-type--body2 fmc-type--bold fmc-mb-3">X-Plan Partner Recognition<br>Ford - RGB</p>
+                                    <a class="fmc-button" href="#">
+                                        Download file
+                                        <span class="fds-icon fds-font--ford-icons__chevron-right fds-icon--offset-right"></span>
+                                    </a>
+                                </div>
+                                <div class="fds-layout-grid__cell--span-4 fds-align--center fmc-mt-8">
+                                    <img class="fmc-marketing-toolkit-img fmc-cards__image fmc-mb-2" src="./img/xplan-full-logo.svg" alt="a placeholder" />
+                                    <p class="fmc-type--body2 fmc-type--bold fmc-mb-3">X-Plan Partner Recognition<br>Ford - RGB</p>
+                                    <a class="fmc-button" href="#">
+                                        Download file
+                                        <span class="fds-icon fds-font--ford-icons__chevron-right fds-icon--offset-right"></span>
+                                    </a>
+                                </div>
+                                <div class="fds-layout-grid__cell--span-4 fds-align--center fmc-mt-8">
+                                    <img class="fmc-marketing-toolkit-img fmc-cards__image fmc-mb-2" src="./img/xplan-full-logo.svg" alt="a placeholder" />
+                                    <p class="fmc-type--body2 fmc-type--bold fmc-mb-3">X-Plan Partner Recognition<br>Ford - RGB</p>
+                                    <a class="fmc-button" href="#">
+                                        Download file
+                                        <span class="fds-icon fds-font--ford-icons__chevron-right fds-icon--offset-right"></span>
+                                    </a>
+                                </div>
+                                <div class="fds-layout-grid__cell--span-4 fds-align--center fmc-mt-8">
+                                    <img class="fmc-marketing-toolkit-img fmc-cards__image fmc-mb-2" src="./img/xplan-full-logo.svg" alt="a placeholder" />
+                                    <p class="fmc-type--body2 fmc-type--bold fmc-mb-3">X-Plan Partner Recognition<br>Ford - RGB</p>
+                                    <a class="fmc-button" href="#">
+                                        Download file
+                                        <span class="fds-icon fds-font--ford-icons__chevron-right fds-icon--offset-right"></span>
+                                    </a>
+                                </div>
+                                <div class="fds-layout-grid__cell--span-4 fds-align--center fmc-mt-8">
+                                    <img class="fmc-marketing-toolkit-img fmc-cards__image fmc-mb-2" src="./img/xplan-full-logo.svg" alt="a placeholder" />
+                                    <p class="fmc-type--body2 fmc-type--bold fmc-mb-3">X-Plan Partner Recognition<br>Ford - RGB</p>
+                                    <a class="fmc-button" href="#">
+                                        Download file
+                                        <span class="fds-icon fds-font--ford-icons__chevron-right fds-icon--offset-right"></span>
+                                    </a>
+                                </div>
+                                <div class="fds-layout-grid__cell--span-4 fds-align--center fmc-mt-8">
+                                    <img class="fmc-marketing-toolkit-img fmc-cards__image fmc-mb-2" src="./img/xplan-full-logo.svg" alt="a placeholder" />
+                                    <p class="fmc-type--body2 fmc-type--bold fmc-mb-3">X-Plan Partner Recognition<br>Ford - RGB</p>
+                                    <a class="fmc-button" href="#">
+                                        Download file
+                                        <span class="fds-icon fds-font--ford-icons__chevron-right fds-icon--offset-right"></span>
+                                    </a>
+                                </div>
+                                <div class="fds-layout-grid__cell--span-4 fds-align--center fmc-mt-8">
+                                    <img class="fmc-marketing-toolkit-img fmc-cards__image fmc-mb-2" src="./img/xplan-full-logo.svg" alt="a placeholder" />
+                                    <p class="fmc-type--body2 fmc-type--bold fmc-mb-3">X-Plan Partner Recognition<br>Ford - RGB</p>
+                                    <a class="fmc-button" href="#">
+                                        Download file
+                                        <span class="fds-icon fds-font--ford-icons__chevron-right fds-icon--offset-right"></span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div id="FDShTabsImagesPanelBattery" class="fmc-tabs__tabpanel" role="tabpanel"   aria-labelledby="FDShTabsImagesTabBattery" tabindex="-1" >
-                        <h3>Battery</h3>
-                        <img class="fds-p--b-2" src="https://via.placeholder.com/1920x1080" alt="a placeholder" style="max-width:100%;" />
-                        <p class="fds-color__text--gray3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis enim porta, iaculis massa dignissim, posuere enim. Aliquam eu tortor auctor, dignissim velit ac, dapibus diam.</p>
+                    <div class="fmc-tabs__tabpanel" role="tabpanel" aria-labelledby="xPlanHeyContactFuide" tabindex="-1">
+                        <div class="fds-layout-grid">
+                            <div class="fds-layout-grid__inner">
+                                <div class="fds-layout-grid__cell--span-4 fds-align--center fmc-mt-8">
+                                    <img class="fmc-marketing-toolkit-img fmc-cards__image fmc-mb-2" src="./img/xplan-full-logo.svg" alt="a placeholder" />
+                                    <p class="fmc-type--body2 fmc-type--bold fmc-mb-3">X-Plan Partner Recognition<br>Ford - RGB</p>
+                                    <a class="fmc-button" href="#">
+                                        Download file
+                                        <span class="fds-icon fds-font--ford-icons__chevron-right fds-icon--offset-right"></span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
+              </div>
         </div>
     </main>
     <footer class="footer">
-        <div class="footer_top fds-layout-grid fds-color__bg--secondary fmc-py-6">
-            <h2 class="fds-color__text--white fds-align--center fmc-mb-2 fmc-type--heading6 fmc-type--bold fmc-type--white">California Residents</h2>
-            <p class="fds-color__text--white fds-align--center fmc-mt-1 fmc-mb-5">Exercise your rights under the California Consumer Privacy Act <a href="#" class="fmc-type--bold fmc-type--white fmc-type--underline">here</a>.</p>
-            <p class="fds-color__text--white fds-align--center"><a href="#" class="fmc-type--white fmc-type--underline">Do not sell my personal information</a>.</p>
+        <div class="footer_top fds-color__bg--secondary">
+            <div class="fds-layout-grid fmc-py-6">
+                <h2 class="fds-color__text--white fds-align--center fmc-mb-2 fmc-type--heading6 fmc-type--bold fmc-type--white">California Residents</h2>
+                <p class="fds-color__text--white fds-align--center fmc-mt-1 fmc-mb-5">Exercise your rights under the California Consumer Privacy Act <a href="#" class="fmc-type--bold fmc-type--white fmc-type--underline">here</a>.</p>
+                <p class="fds-color__text--white fds-align--center"><a href="#" class="fmc-type--white fmc-type--underline">Do not sell my personal information</a>.</p>
+            </div>
         </div>
         <div class="footer_bottom fds-color__bg--fourth fmc-py-6">
             <div class="fds-layout-grid fds-align--center fmc-py-2">
@@ -135,5 +275,8 @@
             </div>
         </div>
     </footer>
+
+    <script src="js/scripts.js"></script>
+    
 </body>
 </html>
