--- a/sales-reporting.html
+++ b/sales-reporting.html
@@ -61,10 +61,12 @@
         </div>
     </main>
     <footer class="footer">
-        <div class="footer_top fds-layout-grid fds-color__bg--secondary fmc-py-6">
-            <h2 class="fds-color__text--white fds-align--center fmc-mb-2 fmc-type--heading6 fmc-type--bold fmc-type--white">California Residents</h2>
-            <p class="fds-color__text--white fds-align--center fmc-mt-1 fmc-mb-5">Exercise your rights under the California Consumer Privacy Act <a href="#" class="fmc-type--bold fmc-type--white fmc-type--underline">here</a>.</p>
-            <p class="fds-color__text--white fds-align--center"><a href="#" class="fmc-type--white fmc-type--underline">Do not sell my personal information</a>.</p>
+        <div class="footer_top fds-color__bg--secondary">
+            <div class="fds-layout-grid fmc-py-6">
+                <h2 class="fds-color__text--white fds-align--center fmc-mb-2 fmc-type--heading6 fmc-type--bold fmc-type--white">California Residents</h2>
+                <p class="fds-color__text--white fds-align--center fmc-mt-1 fmc-mb-5">Exercise your rights under the California Consumer Privacy Act <a href="#" class="fmc-type--bold fmc-type--white fmc-type--underline">here</a>.</p>
+                <p class="fds-color__text--white fds-align--center"><a href="#" class="fmc-type--white fmc-type--underline">Do not sell my personal information</a>.</p>
+            </div>
         </div>
         <div class="footer_bottom fds-color__bg--fourth fmc-py-6">
             <div class="fds-layout-grid fds-align--center fmc-py-2">
