--- a/dashboard.html
+++ b/dashboard.html
@@ -59,7 +59,7 @@
         <div class="fmc-billboard fmc-billboard--justify-start fmc-billboard--align-start">
             <div class="fmc-billboard__image" style="background-image: url(img/dashboard.png);"></div>
             <div class="fmc-billboard__scrim fmc-billboard--scrim-left fmc-billboard--scrim-dark"></div>
-            <div class="fmc-billboard__content fmc-py-9 fmc-px-10">
+            <div class="fmc-billboard__content fds-layout-grid fmc-py-9 fmc-px-10">
                 <div class="fds-layout-grid__inner">
                     <div class="fds-layout-grid__cell--span-6">
                         <h1 class="fds-color__text--white fmc-mb-3">X-Plan Partner Recognition</h1>
@@ -113,10 +113,12 @@
 
     </main>
     <footer class="footer">
-        <div class="footer_top fds-layout-grid fds-color__bg--secondary fmc-py-6">
-            <h2 class="fds-color__text--white fds-align--center fmc-mb-2 fmc-type--heading6 fmc-type--bold fmc-type--white">California Residents</h2>
-            <p class="fds-color__text--white fds-align--center fmc-mt-1 fmc-mb-5">Exercise your rights under the California Consumer Privacy Act <a href="#" class="fmc-type--bold fmc-type--white fmc-type--underline">here</a>.</p>
-            <p class="fds-color__text--white fds-align--center"><a href="#" class="fmc-type--white fmc-type--underline">Do not sell my personal information</a>.</p>
+        <div class="footer_top fds-color__bg--secondary">
+            <div class="fds-layout-grid fmc-py-6">
+                <h2 class="fds-color__text--white fds-align--center fmc-mb-2 fmc-type--heading6 fmc-type--bold fmc-type--white">California Residents</h2>
+                <p class="fds-color__text--white fds-align--center fmc-mt-1 fmc-mb-5">Exercise your rights under the California Consumer Privacy Act <a href="#" class="fmc-type--bold fmc-type--white fmc-type--underline">here</a>.</p>
+                <p class="fds-color__text--white fds-align--center"><a href="#" class="fmc-type--white fmc-type--underline">Do not sell my personal information</a>.</p>
+            </div>
         </div>
         <div class="footer_bottom fds-color__bg--fourth fmc-py-6">
             <div class="fds-layout-grid fds-align--center fmc-py-2">
